[package]
name = "tengfei-ff"
version = "0.1.1"
description = "A command line tool to find files and directories by name."
edition = "2021"
homepage = "https://github.com/tengfei-xy/ff"
repository = "https://github.com/tengfei-xy/ff"
license = "MIT OR Apache-2.0"
keywords = ["find", "file", "directory", "search"]
readme = "README.MD"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"

[[bin]]
name="ff"
