[package]
name = "tengfei-ff"
version = "0.3.1"
description = "A command line tool to find files and directories by name."
edition = "2021"
homepage = "https://github.com/tengfei-xy/ff"
repository = "https://github.com/tengfei-xy/ff"
license = "MIT OR Apache-2.0"
keywords = ["find", "file", "directory", "search"]
readme = "README.MD"

[dependencies]
structopt = "0.3.26"

[target]
[[bin]]
name="ff"
path = "src/main.rs" 